# code-phoenix

./: README.md  broken_script.py  fixed_script.py  pyproject.toml
src/code_phoenix/: crew.py  main.py
src/code_phoenix/config/: agents.yaml  tasks.yaml
src/code_phoenix/tools/: notification_tool.py
